# Kafka_CCTV_Streaming

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/cctv_consumer/: config.py  main.py  processor.py
app/cctv_producer/: api_client.py  config.py  main.py
